@@ -3,6 +3,7 @@ Version 3.3.3 (2010-xx-xx)
 	Added various fixes and new rpc methods for the spellchecker plugin. Patch contributed by Michael Peters.
 	Removed some unnecessary inline style information from some of the dialogs.
 	Fixed some issues with the changing for the TinyMCE jQuery plugin.
+	Fixed so spellchecking/contextmenu can be toggled on/off if the browser has native spellchecker support.
 	Fixed bug where some texts in the new paste plugin wasn't placed in language pack.
 	Fixed bug where IE would produce an incorrect information message when cutting.
 	Fixed bug where removing items using the xhtmlxtras plugin wouldn't work correctly.
